# NP2P

./: .gitignore  LICENSE  ParEst.py  README.md  chi2_test.py  compute_draws.py  gaussian_toy_problem.py  loglikelihood.pyx  models.pyx  old_plpeak_sim.py  parametric_models.pyx  parest_test.py  plpeak_sim.py  population_analysis.py  pyproject.toml  requirements.txt  setup.py  test_logL.py
np2p/: ParEst.py  _numba_functions.py  _utils.py  plot.py
parest/: ParEst.py  _numba_functions.py  loglikelihood.pyx  models.pxd  models.pyx
