[build-system]
requires = [
    "oldest-supported-numpy",
    "setuptools>=42",
    "wheel",
    "build",
    "cython"
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['np2p']

[project]
name = 'NP2P'
description = 'Parameter Estimation from Non-parametric Inference'
version = '0.2.0'
requires-python = '< 3.12'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ['non-parametric', 'parameter estimation', 'inference', 'nested sampling']
authors = [
  {name = "Stefano Rinaldi", email = "stefano.rinaldi@uni-heidelberg.de"},
  {name = "Walter Del Pozzo", email = "walter.delpozzo@unipi.it"},
  ]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Physics',
]

dependencies = [
    "numpy > 1.22",
    "scipy",
    "matplotlib != 3.6.3",
    "corner",
    "numba",
    "emcee",
    ]

[project.urls]
Repository = "https://github.com/sterinaldi/NP2P.git"
Issues = "https://github.com/sterinaldi/NP2P/issues"
